More bootstrap goodness

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,20 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div class="container">
+      <div class="navbar-header">
+      <a class="navbar-brand" href="/quotes">MyQuotes</a>
+    </div>
+  <ul class="nav nav-tabs" role="tablist">
+      <li><a href="/static_pages/home">Home</a></li>
+      <li><a href="/static_pages/help">Help</a></li>
+      <li><a href="/static_pages/about">About</a></li> 
+      <li><a href="/quotes">Quotes</a></li> 
+    </ul>
+  </div>
+</nav>
+<div class="container">
 <%= yield %>
-
+</div>
 </body>
 </html>
