--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,3 @@
 <h1>StaticPages#about</h1>
 <p>Find me in app/views/static_pages/about.html.erb</p>
+<p> Want to see my code? <a href="https://github.com/markprisacaru/myQuotes" target="_blank"><button type="button" class="btn btn-primary">Click Me</button></a></p>
